@@ -10,7 +10,6 @@
       <maximumStackSize value="32" />
       <properties />
       <executeOn event="beforeRun" target="dist" />
-      <executeOn event="beforeRun" target="dist" runConfigurationType="Applet" runConfigurationName="Mona Lisa Applet" />
     </buildFile>
   </component>
   <component name="BuildJarProjectSettings">
